--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-baseurl = "https://ewenme.github.io/"
+baseurl = "http://ewenme.rbind.io/"
 title = "ewenme"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
 pluralizeListTitles = false
 # Enable comments by entering your Disqus shortname
-disqusShortname = "https-ewenme-github-io"
+disqusShortname = "http-ewenme-rbind-io"
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = "UA-98719738-1"
 
