--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,15 @@ preserveTaxonomyNames = true
   hideSocialMenu = false
   showReadTime = true
 
+
+  highlightjsVersion = "9.11.0"
+  highlightjsCDN = "//cdn.bootcss.com"
+  highlightjsLang = ["r", "yaml"]
+  highlightjsTheme = "github"
+
+  MathJaxCDN = "//cdn.bootcss.com"
+  MathJaxVersion = "2.7.1"
+
 [taxonomies]
   tag = "tags"
 
