revert to post descriptions on home page

--- a/config.toml
+++ b/config.toml
@@ -28,6 +28,7 @@ related = false # Includes related articles
 email = "ewenhenderson@gmail.com"
 twitter = "ewen_"
 github = "ewenme"
+rss = "index.xml"
 
 [taxonomies]
 tag = "tags"
