rss content test

--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ description = "ewen's blog and assorted projects."
 includeContent = true
 authorName = "ewen"
 authorEmail = "ewenhenderson@gmail.com"
+rssLimit: 20
 
 [params.assets]
 customCSS = ["css/custom.css"]
