--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ related = false # Includes related articles
 email = "ewenhenderson@gmail.com"
 twitter = "ewen_"
 github = "ewenme"
-rss = "index.xml"
+rss = "index"
 
 [taxonomies]
 tag = "tags"
