--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,9 @@ twitter = "ewen_"
 github = "ewenme"
 rss = "index.xml"
 
+[params.sections_right]
+"https://ewen.io/tags/mixes/" = "mixes"
+
 [taxonomies]
 tag = "tags"
 
