--- a/themes/kiss/exampleSite/config.toml
+++ b/themes/kiss/exampleSite/config.toml
@@ -9,6 +9,8 @@ googleAnalytics = ""
 Paginate = 5
 enableRobotsTXT = true
 
+[params.features]
+disqusOnDemand = true  # Load Disqus comments on click
 
 [params.assets]
 customCSS = ["css/custom.css"]
@@ -40,9 +42,13 @@ twitter = "ribicemir"
 github = "ribice"
 email = "ribice@gmail.com"
 linkedin = "ribice"
-facebook = "ribice"
+gitlab = "ribice"
 instagram = ""
 codepen = ""
+facebook = ""
+
+[params.social.config]
+platforms = ["twitter","github","email","email","linkedin","gitlab"]
 
 [params.matomoAnalytics]
 siteID = 1
