add bandcamp link, delete old theme

--- a/config.toml
+++ b/config.toml
@@ -20,8 +20,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   twitter = "https://twitter.com/ewen_"
   github = "https://github.com/ewenme"
   soundcloud = "https://soundcloud.com/3w3n"
+  bandcamp = "sky.com"
   
-  iconOrder = ["email", "twitter", "github", "SoundCloud"]
+  iconTitles = ["SoundCloud", "BandCamp"]
+  iconOrder = ["Email", "Twitter", "Github", "SoundCloud", "BandCamp"]
 
 # Controls the navigation
 [[menu.main]]
