--- a/config.toml
+++ b/config.toml
@@ -19,11 +19,9 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   email = "mailto:ewenhenderson@gmail.com"
   twitter = "https://twitter.com/ewen_"
   github = "https://github.com/ewenme"
-  soundcloud = "https://soundcloud.com/3w3n"
-  bandcamp = "https://bandcamp.com/ewen_"
-  
-  iconTitles = ["SoundCloud", "BandCamp"]
-  iconOrder = ["Email", "Twitter", "Github", "SoundCloud", "BandCamp"]
+
+  iconTitles = ["SoundCloud"]
+  iconOrder = ["Email", "Twitter", "Github"]
 
 # Controls the navigation
 [[menu.main]]
