--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
 
 [outputFormats.RSS]
   mediatype = "application/rss"
-  baseName = "atom"
+  baseName = "index"
 
 [outputFormats.JSON]
   mediatype = "application/json"
